5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1592_2426.log
== TEST (2019-04-03 13:46:43) 
-- CODE:
t = float(input("qual o tempo de viagem?"))
V = float(input("qual a velocidade media do carro?"))
print(V = D/t)
print(12*D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(V = D/t)
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:47:08) 
-- CODE:
t = float(input("qual o tempo de viagem?"))
V = float(input("qual a velocidade media do carro?"))
print(V = D/t)
print(12*D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(V = D/t)
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:47:26) 
-- CODE:
t = float(input("qual o tempo de viagem?"))
V = float(input("qual a velocidade media do carro?"))
print(V = D//t)
print(12*D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(V = D//t)
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:47:59) 
-- CODE:
t = float(input("qual o tempo de viagem?"))
V = float(input("qual a velocidade media do carro?"))
print(float(V = D//t))
print(12*D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(float(V = D//t))
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
